2001-02-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am, rtems/score/Makefile.am: 
	Apply include_*HEADERS instead of H_FILES.

2001-01-03	Joel Sherrill <joel@OARcorp.com>

	* rtems/score/cpu.h: Added _CPU_Initialize_vectors().
	* cpu_asm.S: Modify to properly dereference _ISR_Vector_table
	now that it is dynamically allocated.

2000-12-19	Joel Sherrill <joel@OARcorp.com>

	* cpu.c: Do not read or write raw interrupt vector table if
	we are on a CPU that does not have a %vbr register and the
	BSP is configured as having the table in ROM.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
        Switch to GNU canonicalization.

2000-10-19  Antti P Miettinen  <anmietti@trshp.ntc.nokia.com>

	* rtems/score/cpu.h: define CPU_Exception_frame for rdbg.
	* m68302.h: Make buffer pointer in m302_SCC_bd volatile.

2000-10-12	John S Gwynne <jgwynne@mrcday.com>

	* sim.h: These changes enable RTEMS to automatically generate
	the ram_init file used by gdb with the BDM patches. The 332 has
	on-board chip select lines (for RAM and FLASH) that must be
	configured before use of these peripherals. These patches parse
	data from start.c where the chip select lines are configured in
	the runtime executable and automatically generates the gdb
	initialization file using the same settings. A great time saver.
	A similar file, ram_init_FW (flash writable), is also generated
	that the flash programming tool uses.
	* BSP/start/start.c: Must be modified to support above.
	* BSP/start/ram_init.ld, BSP/start/ram_init.sed: New files.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Include compile.am.

2000-08-10	Joel Sherrill <joel@OARcorp.com>
